# taramail

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.rst  Makefile  README.rst  compose.dev.yaml  compose.dev.yml  compose.yaml  compose.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/: renovate.json
.github/workflows/: deploy.yml  renovate.yaml  test.yml
acme/: Dockerfile  acme.sh  functions.sh  reload-configurations.sh
alembic/versions/: 1270737d431e_add_sogo_tables.py  359478dc9830_add_user_acl_and_user_attributes.py  4ad58e01b14b_add_missing_tables_for_dovecot.py  a465e415e03d_backend_models.py  cf1ffc14619b_add_sasl_logs.py
backend/: .dockerignore  Dockerfile  Makefile  README.rst  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1270737d431e_add_sogo_tables.py  359478dc9830_add_user_acl_and_user_attributes.py  4ad58e01b14b_add_missing_tables_for_dovecot.py  688be1178ef6_default_alias_private_and_public_.py  79d64ba432c7_add_internal_column_to_alias.py  8d3df567c75c_backend_views.py  9fbec9137efe_sogo_tables.py  a465e415e03d_backend_models.py  ca00bb9d1645_update_quota_server_defaults.py  cf1ffc14619b_add_sasl_logs.py  f3adbeb27923_add_sieve_filters_table.py
backend/docs/: conf.py  github.rst  index.rst  modules.rst  networking.rst  services.rst  taram.testing.rst  taramail.rst  taramail.testing.rst  technologies.rst
backend/taram/: api.py  backend.py  cli.py  db.py  domain.py  http.py  mailbox.py  models.py  netfilter.py  password.py  queue.py  schemas.py  sogo.py  store.py  units.py  views.py
backend/taram/testing/: compose.py  db.py  fixtures.py  managers.py  queue.py  services.py  store.py  unique.py
backend/taramail/: alias.py  api.py  auth.py  cli.py  db.py  deps.py  dkim.py  dockerapi.py  domain.py  email.py  exporter.py  forwarding_host.py  http.py  logger.py  mailbox.py  models.py  netfilter.py  password.py  queue.py  relayhost.py  rspamd.py  schema.py  schemas.py  sogo.py  spf.py  store.py  transport.py  views.py
backend/taramail/rspamd/: router.py  settings.py
backend/taramail/rspamd/templates/: settings.j2
backend/taramail/templates/: rspamd_settings.j2
backend/taramail/testing/: compose.py  db.py  exporters.py  fixtures.py  managers.py  queue.py  services.py  store.py  unique.py
backend/tests/: models.py
backend/tests/integration/: conftest.py  test_api.py  test_backend.py  test_blackbox_exporter.py  test_dockerapi.py  test_dovecot.py  test_exporter.py  test_frontend.py  test_memcached.py  test_mysql.py  test_mysqld_exporter.py  test_postfix.py  test_postfix_exporter.py  test_queue.py  test_redis.py  test_rspamd.py  test_sogo.py  test_store.py  test_unbound.py
backend/tests/unit/: conftest.py  test_alias.py  test_api.py  test_auth.py  test_backend.py  test_cli.py  test_db.py  test_dkim.py  test_domain.py  test_email.py  test_exporter.py  test_forwarding_host.py  test_http.py  test_logger.py  test_mailbox.py  test_netfilter.py  test_password.py  test_registry.py  test_relayhost.py  test_rspamd.py  test_schema.py  test_schemas.py  test_sogo.py  test_spf.py  test_transport.py
backend/tests/unit/rspamd/: test_settings.py
backend/tests/unit/testing/: test_db.py  test_unique.py
blackbox_exporter/: Dockerfile  config.yml.template  docker-entrypoint.sh
certbot/: deploy-hook.sh  generate-cert.sh
clamd/: clamd.conf  freshclam.conf
custom_exporter/: Dockerfile  exporter.py  requirements.txt
dockerapi/: Dockerfile
docs/: conf.py  github.rst  hardware.rst  index.rst  modules.rst  networking.rst  services.rst  system.rst  taram.rst  taram.testing.rst
dovecot/: .gitignore  Dockerfile  clean_q_aged.sh  docker-entrypoint.sh  entrypoint.sh  quarantine_notify.py  quota_notify.py  repl_health.sh  sa-rules.sh  syslog-ng-redis_slave.conf  syslog-ng.conf  trim_logs.sh
dovecot/conf/: dovecot.conf  dovecot.folders.conf  global_sieve_after  global_sieve_before  mail_plugins_imap  mail_plugins_lmtp
frontend/: .gitignore  Dockerfile  biome.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/conf.d/: default.conf
frontend/src/: index.css  index.tsx  manifest.json
monit/: Dockerfile  docker-entrypoint.sh  entrypoint.sh  monitrc
monit/conf/: clamd  dovecot  frontend  mysql  postfix  redis  rspamd  sogo  ssl  unbound
monit/scripts/: monit-clamd  monit-dovecot  monit-frontend  monit-mysql  monit-postfix  monit-redis  monit-rspamd  monit-sogo  monit-ssl  monit-unbound
mysql/conf.d/: my.cnf
nginx/: bootstrap.py  docker-entrypoint.sh
postfix/: .gitignore  Dockerfile  docker-entrypoint.sh  postfix.sh  rspamd-pipe-ham  rspamd-pipe-spam  supervisord.conf  syslog-ng-redis_slave.conf  syslog-ng.conf  whitelist-forwardinghosts
postfix/conf/: allow_mail_local.regexp  anonymize_headers.pcre  local_transport  main.cf  master.cf
prometheus/: prometheus.yml
redis/: docker-entrypoint.sh
rspamd/: .gitignore  Dockerfile  docker-entrypoint.sh  entrypoint.sh  settings.conf
rspamd/custom/: monitoring_nolog.map
rspamd/local.d/: composites.conf  fuzzy_check.conf  fuzzy_group.conf  groups.conf  metrics_exporter.conf  multimap.conf  options.inc  ratelimit.conf  redis.conf
rspamd/lua/: ratelimit.lua  rspamd.local.lua
rspamd/override.d/: worker-controller.custom.inc  worker-proxy.inc
sogo/: .gitignore  Dockerfile  bootstrap-sogo.sh  docker-entrypoint.sh  syslog-ng-redis_slave.conf  syslog-ng.conf
sogo/conf/: sogo.conf
taram/: backend.py  cli.py  dockerapi.py  domain.py  logger.py  mailbox.py  memcached.py  models.py  netfilter.py  schemas.py  sogo.py  views.py
taram/testing/: compose.py  db.py  dockerapi.py  fixtures.py  managers.py  services.py  unbound.py  unique.py
tests/: models.py
tests/integration/: conftest.py  test_backend.py  test_clamd.py  test_dockerapi.py  test_dovecot.py  test_dyndns.py  test_memcached.py  test_mysql.py  test_netfilter.py  test_postfix.py  test_redis.py  test_rspamd.py  test_sogo.py  test_unbound.py
unbound/: Dockerfile  unbound.conf
(+37 files in other folders)
