[project]
name = "taramail"
version = "0.0.0"
description = "Notre-Dame-du-Laus community mail server."
authors = [
    {name = "Marc Tardif", email = "marc@taram.ca"},
]
readme = "README.rst"
repository = "https://github.com/cr3/taramail"
packages = [
    {include = "taramail"},
]
include = [
    "taramail/templates/**/*.j2",
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiodocker (>=0.24.0,<1.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "bcrypt (>=5.0.0,<5.1.0)",
    "cryptography (>=46.0.3,<46.1.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "fastapi (>=0.115.6,<1.0.0)",
    "idna (>=3.11,<4.0)",
    "ipaddress (>=1.0.23,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "lookuper (>=0.5.1,<1.0.0)",
    "more-itertools (>=10.5.0,<11.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "pip-nftables (>=1.0.2.post1,<2.0.0)",
    "prometheus-client (>=0.23.1,<1.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "pylibmc (>=1.6.3,<2.0.0)",
    "redis (>=7.1.0,<7.2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<1.0.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
    "yarl (>=1.18.3,<2.0.0)",
]

[tool.poetry.group.test.dependencies]
coverage = "^7.2.3"
httpx = "^0.28.1"
pyhamcrest = "^2.1.0"
pytest = "^9.0.0"
pytest-unique = "^0.1.7"
pytest-xdocker = "^0.2.7"
redis = "^7.0.0"
responses = "^0.25.6"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
ruff = "^0.14.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^9.0.0"
sphinxcontrib-log-cabinet = "^1.0.1"

[project.entry-points."pytest11"]
taramail = "taramail.testing.fixtures"
taramail-db = "taramail.testing.db"
taramail-exporters = "taramail.testing.exporters"
taramail-managers = "taramail.testing.managers"
taramail-services = "taramail.testing.services"
taramail-queue = "taramail.testing.queue"
taramail-store = "taramail.testing.store"

[project.entry-points."pytest_unique"]
db-model = "taramail.testing.unique:unique_db_model"
db-value = "taramail.testing.unique:unique_db_value"
domain = "taramail.testing.unique:unique_domain"
ip = "taramail.testing.unique:unique_ip"

[project.entry-points."taramail_queue"]
memory = "taramail.queue:MemoryQueue"
redis = "taramail.queue:RedisQueue"

[project.entry-points."taramail_store"]
memcached = "taramail.store:MemcachedStore"
memory = "taramail.store:MemoryStore"
redis = "taramail.store:RedisStore"

[project.scripts]
netfilter = "taramail.netfilter:main"
taramail = "taramail.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Create your own exception
    "TRY002",
    # Avoid specifying long messages outside the exception class
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

# Pytest options:
#   https://docs.pytest.org/en/6.2.x/reference.html#ini-options-ref
[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.rst",
]
testpaths = [
    "taramail",
    "docs",
    "tests",
]

# Coverage options:
#   https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.paths]
source = [
    "taramail",
    "*/*/site-packages",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = [
    "taramail",
]
